Fix overlapping content on activities page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1003,7 +1003,7 @@ button {
 
         .act-cont-left,
         .act-cont-right {
-            height: 1500px;
+            height: 1600px;
             width: 100%;
             font-size: 100%;
         }
